--- a/cow_13_07.ipynb
+++ b/cow_13_07.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "cow_13.07.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOEDjXqDKt8FCmCI/NzdRxY",
+      "authorship_tag": "ABX9TyNi4JRilfTU/EIL8rT9HN0y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -662,6 +662,65 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "RFxdvIkOS7Ga",
+        "outputId": "7e05a355-5db6-4696-d83e-d506148ba8c3"
+      },
+      "source": [
+        "# check annotations files\n",
+        "j =0\n",
+        "for i,im in enumerate(images[:1]):\n",
+        "  \n",
+        "  for an in annot:\n",
+        "    if an['image_id'] == im['id']:\n",
+        "      print(j)\n",
+        "      print(an)\n",
+        "      j += 1"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "{'segmentation': [[301.68, 159.23, 305.5, 157.32, 308.37, 159.23, 313.15, 160.18, 320.79, 157.32, 323.65, 159.23, 328.43, 163.05, 329.38, 176.42, 328.43, 180.24, 326.52, 184.06, 323.65, 184.06, 323.65, 172.6, 320.79, 172.6, 313.15, 173.56, 316.97, 182.15, 310.28, 181.2, 309.32, 171.65, 305.5, 169.73, 302.64, 159.23]], 'area': 422.9528500000006, 'iscrowd': 0, 'image_id': 435206, 'bbox': [301.68, 157.32, 27.7, 26.74], 'category_id': 21, 'id': 73046}\n",
+            "1\n",
+            "{'segmentation': [[435.43, 148.75, 437.85, 151.83, 439.28, 156.24, 438.95, 159.1, 439.83, 159.65, 439.94, 161.52, 438.51, 161.74, 437.85, 159.43, 437.52, 156.24, 436.97, 155.14, 436.09, 160.64, 435.76, 166.15, 434.33, 165.93, 434.11, 160.53, 433.89, 159.1, 432.57, 160.31, 432.46, 165.82, 430.7, 165.27, 431.58, 161.08, 431.03, 159.21, 429.7, 160.64, 429.7, 165.38, 428.93, 165.6, 428.05, 164.28, 428.27, 158.66, 426.62, 155.25, 426.95, 151.28, 428.27, 149.3, 431.8, 147.21, 434.0, 147.65]], 'area': 151.09499999999977, 'iscrowd': 0, 'image_id': 435206, 'bbox': [426.62, 147.21, 13.32, 18.94], 'category_id': 21, 'id': 75175}\n",
+            "2\n",
+            "{'segmentation': [[345.31, 147.01, 348.64, 147.24, 351.63, 146.54, 357.04, 146.77, 360.03, 146.89, 360.03, 151.84, 359.11, 153.45, 361.3, 156.55, 361.53, 163.11, 359.69, 163.11, 359.92, 161.73, 358.42, 157.25, 357.5, 154.71, 357.27, 159.55, 356.35, 162.19, 354.17, 162.31, 353.71, 161.39, 354.86, 159.43, 354.63, 154.6, 348.99, 155.06, 348.99, 163.0, 346.92, 162.31, 346.69, 157.71, 344.16, 157.25, 342.66, 155.86, 341.51, 158.05, 339.21, 157.94, 339.44, 156.09, 338.63, 153.45, 339.09, 151.49, 341.16, 150.11, 342.54, 150.11, 344.04, 147.58, 344.39, 147.12]], 'area': 225.6599999999997, 'iscrowd': 0, 'image_id': 435206, 'bbox': [338.63, 146.54, 22.9, 16.57], 'category_id': 21, 'id': 278086}\n",
+            "3\n",
+            "{'segmentation': [[357.97, 143.81, 354.94, 141.28, 353.17, 141.53, 352.66, 140.27, 353.67, 138.75, 353.42, 137.23, 355.19, 137.74, 360.76, 137.99, 364.04, 137.23, 364.8, 137.74, 365.82, 138.75, 365.82, 140.02, 366.07, 145.08, 363.79, 142.04, 361.51, 142.29, 359.24, 143.31, 358.98, 146.34, 357.97, 146.09]], 'area': 64.83694999999975, 'iscrowd': 0, 'image_id': 435206, 'bbox': [352.66, 137.23, 13.41, 9.11], 'category_id': 21, 'id': 278224}\n",
+            "4\n",
+            "{'segmentation': [[366.53, 135.63, 368.3, 135.78, 369.19, 135.78, 370.51, 136.07, 372.29, 136.07, 374.06, 135.78, 375.54, 135.63, 377.9, 135.33, 379.97, 135.48, 381.59, 135.93, 382.18, 136.37, 382.18, 137.4, 382.33, 140.65, 382.48, 141.09, 382.48, 143.6, 382.18, 145.23, 379.23, 143.9, 378.49, 141.83, 377.75, 141.39, 374.8, 142.42, 374.06, 142.57, 372.88, 143.6, 371.4, 145.52, 369.63, 145.23, 368.74, 140.8, 368.74, 140.65, 367.86, 140.06, 365.94, 139.91, 365.79, 138.44, 365.94, 137.4, 365.94, 136.07]], 'area': 117.80104999999989, 'iscrowd': 0, 'image_id': 435206, 'bbox': [365.79, 135.33, 16.69, 10.19], 'category_id': 21, 'id': 278771}\n",
+            "5\n",
+            "{'segmentation': [[317.0, 151.14, 321.47, 153.05, 323.27, 154.9, 325.78, 156.1, 328.89, 155.56, 333.31, 155.56, 335.71, 156.38, 338.28, 156.16, 339.2, 155.12, 338.49, 152.94, 338.66, 151.47, 332.88, 146.23, 323.27, 146.12, 316.57, 146.39]], 'area': 174.14110000000014, 'iscrowd': 0, 'image_id': 435206, 'bbox': [316.57, 146.12, 22.63, 10.26], 'category_id': 21, 'id': 369731}\n",
+            "6\n",
+            "{'segmentation': [[451.03, 149.02, 459.54, 148.85, 457.37, 146.51, 453.2, 144.51, 451.36, 144.18, 450.19, 145.01, 449.86, 147.35, 449.86, 149.18]], 'area': 31.631200000000064, 'iscrowd': 0, 'image_id': 435206, 'bbox': [449.86, 144.18, 9.68, 5.0], 'category_id': 21, 'id': 369884}\n",
+            "7\n",
+            "{'segmentation': [[298.29, 142.98, 294.55, 147.55, 296.94, 152.12, 298.29, 157.0, 300.58, 157.1, 302.86, 155.23, 303.8, 152.74, 304.84, 150.46, 304.73, 145.36, 300.68, 142.14]], 'area': 102.40514999999992, 'iscrowd': 0, 'image_id': 435206, 'bbox': [294.55, 142.14, 10.29, 14.96], 'category_id': 21, 'id': 1819537}\n",
+            "8\n",
+            "{'segmentation': [[241.36, 160.35, 239.17, 158.16, 239.8, 157.07, 240.72, 155.42, 239.99, 152.78, 240.35, 151.04, 243.54, 149.4, 248.47, 148.4, 253.12, 149.4, 255.77, 151.23, 256.13, 152.41, 254.77, 153.78, 251.76, 154.15, 249.75, 155.97, 247.38, 156.34, 245.73, 155.7, 244.46, 154.97, 242.18, 157.8, 241.45, 159.53]], 'area': 99.76535, 'iscrowd': 0, 'image_id': 435206, 'bbox': [239.17, 148.4, 16.96, 11.95], 'category_id': 21, 'id': 2069588}\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "7f9BCdPgS7UO"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
